--- a/app.json
+++ b/app.json
@@ -5,7 +5,7 @@
 
     "description": "A Modular telegram bot.",
 
-    "repository": "https://github.com/imacekun/pyrotxt",
+    "repository": "https://github.com/Ranjan098/Hector-Txt-to-videos",
     "buildpacks":[
         {
             "url": "https://github.com/jonathanong/heroku-buildpack-ffmpeg-latest.git"
